bhushan: packets, apply kyc

--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -30,7 +30,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="cceApprovalStatus">
-                    <mat-header-cell *matHeaderCellDef>cceApprovalStatus</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>CCE Approval Status</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <span class="text-success"
                             *ngIf="role.customerKycClassification.kycStatusFromCce == 'approved'">
