--- a/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/packets/packets-list/packets-list.component.html
@@ -21,8 +21,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div class="kt-pointer" (click)="editLead(role)" class="kt-pointer">Edit</div>
-                            <div class="kt-pointer" (click)="editLead(role)" class="kt-pointer">| View</div>
+                            <div class="kt-pointer" class="kt-pointer">Edit</div>
+                            <div class="kt-pointer" class="kt-pointer">Delete</div>
                         </div>
                     </mat-cell>
                 </ng-container>
