--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-list/category-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-list/category-list.component.html
@@ -45,20 +45,24 @@
                     </mat-cell>
                 </ng-container> -->
 
-                <ng-container matColumnDef="subCategoryName">
-                    <mat-header-cell *matHeaderCellDef>Sub Category</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.subCategoryName | titlecase}}</mat-cell>
-                </ng-container>
                 <ng-container matColumnDef="categoryName">
-                    <mat-header-cell *matHeaderCellDef>Category</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.category?.categoryName | titlecase}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef>Category Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element?.categoryName | titlecase}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="conversionFactor">
+                    <mat-header-cell *matHeaderCellDef>Conversion Factor</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element?.conversionFactor}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="metalType">
+                    <mat-header-cell *matHeaderCellDef>Metal Type</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element?.metalType?.metalType}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editSubCategory(element.id)" class="kt-pointer"> Edit | &nbsp;</div>
-                            <div (click)="deleteSubCategory(element.id)" class="kt-pointer text-danger"> Delete </div>
+                            <div (click)="editCategory(element.id)" class="kt-pointer"> Edit | &nbsp;</div>
+                            <div (click)="deleteCategory(element.id)" class="kt-pointer text-danger"> Delete </div>
                         </div>
                     </mat-cell>
                 </ng-container>
