Internal user changes

--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/add-broker/add-broker.component.html
@@ -24,7 +24,7 @@
                         <!-- Partner Name -->
                         <div class="row">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Merchant
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Merchant
                                     Name</label>
                             </div>
                             <div class="col-8">
@@ -42,7 +42,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Store ID
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Store ID
                                 </label>
                             </div>
                             <div class="col-8">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Full Name
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Full Name
                                 </label>
                             </div>
                             <div class="col-8">
@@ -93,7 +93,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Mobile
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Mobile
                                     Number</label>
                             </div>
                             <div class="col-8">
@@ -108,7 +108,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Email
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Email
                                 </label>
                             </div>
                             <div class="col-8">
@@ -125,7 +125,7 @@
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <label for="" [class.mandatory]="data.action!='view'"
-                                    class="text-color font-weight-500">Address</label>
+                                     class="text-color kt-padding-l-10">Address</label>
                             </div>
                             <div class="col-8">
                                 <textarea cols="3" rows="3" class="form-control" formControlName="address"
@@ -139,7 +139,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">State
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">State
                                 </label>
                             </div>
                             <div class="col-8">
@@ -156,7 +156,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">City
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">City
                                 </label>
                             </div>
                             <div class="col-8">
@@ -172,7 +172,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Pin Code
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Pin Code
                                 </label>
                             </div>
                             <div class="col-8">
@@ -185,8 +185,8 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" class="text-color ">PAN No.
-                                </label>
+                                <label for="" class="text-color kt-padding-l-10">PAN No.
+                                 </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="panCardNumber"
@@ -199,8 +199,8 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" class="text-color ">Name on PAN
-                                </label>
+                                <label for="" class="text-color kt-padding-l-10">Name on PAN
+                                 </label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" type="text" formControlName="nameOnPanCard"
@@ -210,7 +210,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label class="text-color ">Upload PAN
+                                <label class="text-color  kt-padding-l-10">Upload PAN
                                 </label>
                             </div>
                             <div class="col-8">
@@ -230,7 +230,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label for="" [class.mandatory]="data.action!='view'" class="text-color ">Status
+                                <label for="" [class.mandatory]="data.action!='view'" class="kt-padding-l-10 text-color ">Status
                                 </label>
                             </div>
                             <div class="col-8">
