--- a/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/broker/broker-list/broker-list.component.html
@@ -18,7 +18,7 @@
                     <mat-header-cell *matHeaderCellDef >Store Id</mat-header-cell>
                     <mat-cell *matCellDef="let broker">
                         <div class="text-color">
-                            {{broker.storeId}}
+                            {{broker.store.storeUniqueId}}
                         </div>
                     </mat-cell>
                 </ng-container>
