--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user/add-internal-user/add-internal-user.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user/add-internal-user/add-internal-user.component.html
@@ -23,8 +23,8 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <!-- Partner Name -->
                         <div class="row">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Name</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">Name</label>
                             </div>
                             <div class="col-8">
                                 <div class="row">
@@ -48,20 +48,34 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">User ID</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">Select Branch</label>
                             </div>
                             <div class="col-8">
-                                <input class="form-control" formControlName="userId" placeholder="e.g 012345"
-                                    [class.isError]="controls.userId.touched && controls.userId.invalid">
-                                <mat-error *ngIf="controls.userId.errors?.required && controls.userId.touched">
+                                <select class="form-control" formControlName="internalBranchId" autocomplete="off"
+                                    [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
+                                    <option value="" [selected]="true" [disabled]="true">Select</option>
+                                    <option [value]="branch.id" *ngFor="let branch of branch">{{branch.name}}</option>
+                                </select>
+                                <mat-error *ngIf="controls.internalBranchId.touched && controls.internalBranchId.errors?.required">
+                                    Required field</mat-error>
+                            </div>
+                        </div>
+                        <div class="row kt-padding-t-15">
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">User ID</label>
+                            </div>
+                            <div class="col-8">
+                                <input class="form-control" formControlName="userUniqueId" placeholder="e.g 012345"
+                                    [class.isError]="controls.userUniqueId.touched && controls.userUniqueId.invalid">
+                                <mat-error *ngIf="controls.userUniqueId.errors?.required && controls.userUniqueId.touched">
                                     Required field
                                 </mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Email</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">Email</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" formControlName="email" placeholder="e.g abc@123.com"
@@ -75,29 +89,33 @@
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">Mobile Number</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">Mobile Number</label>
                             </div>
                             <div class="col-8">
                                 <input class="form-control" numbersOnly maxlength="10" formControlName="mobileNumber"
                                     placeholder="e.g 9023451234"
                                     [class.isError]="controls.mobileNumber.touched && controls.mobileNumber.invalid">
-                                <mat-error
+                                    <mat-error
                                     *ngIf="controls.mobileNumber.errors?.required && controls.mobileNumber.touched">
                                     Required field
-                                </mat-error>
+                                </mat-error><mat-error
+                                *ngIf="controls.mobileNumber.errors?.minlength && controls.mobileNumber.touched">
+                                Invalid Input
+                            </mat-error>
                             </div>
                         </div>
                         <div class="row kt-padding-t-15">
-                            <div class="col-4">
-                                <label for="" class="text-color font-weight-bold">User Type</label>
+                            <div class="col-4 form-label">
+                                <label for="" class="kt-padding-l-10 text-color mandatory">User Type</label>
                             </div>
                             <div class="col-8">
-                                <select class="form-control" formControlName="userType" autocomplete="off"
-                                    [class.isError]="controls.userType.touched && controls.userType.invalid">
-                                    <option value="" [selected]="true" [disabled]="true">Select</option>
+                                <select class="form-control" formControlName="roleId" autocomplete="off"
+                                    [class.isError]="controls.roleId.touched && controls.roleId.invalid">
+                                    <option value="" selected disabled>Select</option>
+                                    <option [value]="role.id" *ngFor="let role of roles">{{role.roleName}}</option>
                                 </select>
-                                <mat-error *ngIf="controls.userType.touched && controls.userType.errors?.required">
+                                <mat-error *ngIf="controls.roleId.touched && controls.roleId.errors?.required">
                                     Required field</mat-error>
                             </div>
                         </div>
