--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user/internal-user-list/internal-user-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user/internal-user-list/internal-user-list.component.html
@@ -10,7 +10,7 @@
                     <mat-header-cell *matHeaderCellDef>User ID</mat-header-cell>
                     <mat-cell *matCellDef="let user">
                         <div class="text-color">
-                            {{user.name}}
+                            {{user.userUniqueId}}
                         </div>
                     </mat-cell>
                 </ng-container>
@@ -43,7 +43,7 @@
                     <mat-header-cell *matHeaderCellDef>Branch Name</mat-header-cell>
                     <mat-cell *matCellDef="let user">
                         <div class="text-color">
-                            {{user.name}}
+                            {{user.internalBranches[0].name}}
                         </div>
                     </mat-cell>
                 </ng-container>
