--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-add/category-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-add/category-add.component.html
@@ -1,71 +1,70 @@
+<!-- <kt-action-natification></kt-action-natification> -->
+
+<kt-toastr #toastr></kt-toastr>
 
 <div class="kt-portlet">
     <kt-modal-header [title]="title" (action)="action($event)"></kt-modal-header>
     <div class="kt-portlet__body">
         <div class="kt-form">
-            <form [formGroup]="addCategory">
+            <form [formGroup]="categoryForm">
 
-                <!-- <div class="kt-portlet__body-progress" *ngIf="viewLoading">
+                <div class="kt-portlet__body-progress" *ngIf="viewLoading">
                     <mat-spinner [diameter]="20"></mat-spinner>
-                </div> -->
+                </div>
 
+                <!-- <kt-alert type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
+                            Oh snap! Change a few things up and try submitting again.
+                        </kt-alert> -->
 
-
-
-
-                <div class="col-lg-12 kt-margin-bottom-20-mobile">
-
-
-                    <div class="row">
-                        <!-- Partner Name -->
-                        <div class="col-4 form-label">
-                            <label [class.mandatory]="isMandatory ">Category Name</label>
+                <div class="form-group kt-form__group row">
+                    <div class="col-lg-12 kt-margin-bottom-20-mobile">
+                        <div class="row">
+                            <div class="col-5">
+                                <label [class.mandatory]="isMandatory">Category Name</label>
+                            </div>
+                            <div class="col-7">
+                                <input class="form-control" formControlName="categoryName" type="text"
+                                    placeholder="eg: gold"
+                                    [class.isError]="controls.categoryName.touched && controls.categoryName.invalid">
+                                <mat-error
+                                    *ngIf="controls.categoryName.errors?.required && controls.categoryName.touched">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <input class="form-control" formControlName="categoryName" autocomplete="off"
-                                placeholder="Enter Category Name"
-                                [class.isError]="controls.categoryName.touched && controls.categoryName.invalid">
-                            <mat-error *ngIf="controls.categoryName.touched && controls.categoryName.errors?.required">Required
-                                field</mat-error>
+                        <div class="row kt-padding-t-15">
+                            <div class="col-5">
+                                <label [class.mandatory]="isMandatory">Metal Type</label>
+                            </div>
+                            <div class="col-7">
+                                <select class="form-control" name="metalTypeId" formControlName="metalTypeId"
+                                    [class.isError]="controls.metalTypeId.touched && controls.metalTypeId.invalid">
+                                    <option value="" [selected]="true" [disabled]="true">Metal Type</option>
+                                    <option *ngFor="let item of metalType" [value]="item?.id">
+                                        {{item?.metalType}}
+                                    </option>
+                                </select>
+                                <mat-error
+                                    *ngIf="controls.metalTypeId.touched && controls.metalTypeId.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
+                        </div>
+                        <div class="row kt-padding-t-15">
+                            <div class="col-5">
+                                <label [class.mandatory]="isMandatory">Conversion Factor</label>
+                            </div>
+                            <div class="col-7">
+                                <input class="form-control" formControlName="conversionFactor" type="number"
+                                    placeholder="eg: 999"
+                                    [class.isError]="controls.conversionFactor.touched && controls.conversionFactor.invalid">
+                                <mat-error
+                                    *ngIf="controls.conversionFactor.errors?.required && controls.conversionFactor.touched">
+                                    Required field
+                                </mat-error>
+                            </div>
                         </div>
                     </div>
-                    <div class="row kt-padding-t-15">
-                        <div class="col-4 form-label">
-                            <label [class.mandatory]="isMandatory ">Conversion Factor</label>
-                        </div>
-                        <div class="col-8">
-                            <input class="form-control" formControlName="conversionFactor" autocomplete="off"
-                                placeholder="Enter Conversion Factor"
-                                [class.isError]="controls.conversionFactor.touched && controls.conversionFactor.invalid">
-                            <mat-error *ngIf="controls.conversionFactor.touched && controls.conversionFactor.errors?.required">Required
-                                field</mat-error>
-                        </div>
-                    </div>
-
-                    <div class="row kt-padding-t-15">
-                        <div class="col-4 form-label">
-                            <label [class.mandatory]="isMandatory ">Select Metal Type</label>
-                        </div>
-
-                        <div class="col-8">
-                            <select class="form-control" formControlName="metalTypeId" 
-                                [class.isError]="controls.metalTypeId.touched && controls.metalTypeId.invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select Metal Type</option>
-
-                                <option *ngFor="let metal of metalListType" [value]="metal.id">
-                                    {{metal.metalType}}
-                                </option>
-                            </select>
-                            <mat-error *ngIf="controls.metalTypeId.touched && controls.metalTypeId.errors?.required">
-                                Required field</mat-error>
-                        </div>
-
-                    </div>
-
-
-
-
-
                 </div>
             </form>
         </div>
