--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-list/category-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category-list/category-list.component.html
@@ -61,8 +61,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editCategory(element.id)" class="kt-pointer"> Edit | &nbsp;</div>
-                            <div (click)="deleteCategory(element.id)" class="kt-pointer text-danger"> Delete </div>
+                            <div (click)="editCategory(element)" class="kt-pointer"> Edit | &nbsp;</div>
+                            <div (click)="deleteCategory(element)" class="kt-pointer text-danger"> Delete </div>
                         </div>
                     </mat-cell>
                 </ng-container>
