--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-list/sub-category-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/sub-category/sub-category-list/sub-category-list.component.html
@@ -57,8 +57,8 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editSubCategory(element.id)" class="kt-pointer"> Edit | &nbsp;</div>
-                            <div (click)="deleteSubCategory(element.id)" class="kt-pointer text-danger"> Delete </div>
+                            <div (click)="editSubCategory(element)" class="kt-pointer"> Edit | &nbsp;</div>
+                            <div (click)="deleteSubCategory(element)" class="kt-pointer text-danger"> Delete </div>
                         </div>
                     </mat-cell>
                 </ng-container>
