bhushan: packets API, bug fixing

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
@@ -160,10 +160,10 @@
 
 
                                 </div>
-                                <div class="col offset-2 kt-margin-t-20 text-color font-11">
+                                <div class=" offset-2 kt-margin-t-20 text-color font-11">
                                     (Please verify the detail before moving forward)
                                 </div>
-                                <div class="col offset-2 kt-margin-t-20">
+                                <div class=" offset-2 kt-margin-t-20">
                                     <kt-button [value]="'Next'" [type]="'button'" (action)="submit()"></kt-button>
                                 </div>
                             </div>
