--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -237,14 +237,17 @@
                         <!-- Date & Time -->
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <mat-label>Pin Code</mat-label>
+                                <mat-label class="mandatory">Pin Code</mat-label>
                             </div>
 
                             <div class="col-8">
                                 <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <input class="form-control" formControlName="pinCode" numbersOnly maxlength="6"
                                     placeholder="000 000">
-                                <mat-error *ngIf="controls.dateTime.errors?.required ">Required field</mat-error>
+                                <mat-error *ngIf="controls.pinCode.errors?.required && controls.pinCode.touched">
+                                    Required field</mat-error>
+                                <mat-error *ngIf="controls.pinCode.errors?.pattern && controls.pinCode.touched">
+                                    Invalid Input</mat-error>
                                 <!-- </mat-form-field> -->
                             </div>
                         </div>
