preview and disabled for upload packets

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
@@ -3,13 +3,12 @@
 		height: 220px;
 	}
 	::ng-deep.mat-tab-header {
-		max-width: 90%;
+		position: relative !important;
 	}
 	.addmore {
 		position: absolute;
-		top: 15px;
-		left: 30%;
-		z-index: 99999 !important;
+		top: 10px;
+		left: 150px;
 		background: transparent;
 		border: thin solid #454D67;
 		border-radius: 5px;
