--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -63,7 +63,7 @@
                         <label class="my-auto text-color ">Acid Test</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.acidTest.value" class="my-auto text-primary text-center kt-padding-l-15"
+                        <label *ngIf="ornament.controls.acidTest.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                         (click)="preview(ornament.controls.acidTest.value,idx)">View Image</label>
                     </div>
                     <div class="col-4 text-right">
@@ -130,7 +130,7 @@
                         <label class="my-auto text-color ">WM 00 wt.</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.weightMachineZeroWeight.value" class="my-auto text-primary text-center kt-padding-l-15"
+                        <label *ngIf="ornament.controls.weightMachineZeroWeight.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                         (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View Image</label>
                     </div>
                     <div class="col-4 text-right">
@@ -150,7 +150,7 @@
                         <label class="my-auto text-color ">Stone Touch</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.stoneTouch.value" class="my-auto text-primary text-center kt-padding-l-15"
+                        <label *ngIf="ornament.controls.stoneTouch.value" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                         (click)="preview(ornament.controls.stoneTouch.value,idx)">View Image</label>
                     </div>
                     <div class="col-4 text-right">
@@ -169,7 +169,7 @@
                         <label class="my-auto text-color ">Purity Test</label>
                     </div>
                     <div class="col-4 form-label">
-                        <label *ngIf="ornament.controls.purityTest.value.length > 0" class="my-auto text-primary text-center kt-padding-l-15"
+                        <label *ngIf="ornament.controls.purityTest.value.length > 0" class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
                         (click)="preview(ornament.controls.purityTest.value,idx)">View Image</label>
                     </div>
                     <div class="col-4 text-right">
