--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -60,10 +60,14 @@
                         <label class ="mandatory">Tenure</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="tenure" class="form-control" (change)="setEndDate()">
+                        <select formControlName="tenure" class="form-control" (change)="setEndDate()" 
+                        [class.isError]="controls.tenure.touched && controls.tenure.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Tenure</option>
                             <option [value]="ten" *ngFor="let ten of tenure">{{ten}}</option>
                         </select>
+                        <mat-error *ngIf="controls.tenure.errors?.required && controls.tenure.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -77,8 +81,12 @@
                         <label class ="mandatory">Loan End Date</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020" [matDatepicker]="picker1"/>
+                        <input class="form-control" formControlName="loanEndDate" placeholder="02 May, 2020" [matDatepicker]="picker1"
+                        [class.isError]="controls.loanEndDate.touched && controls.loanEndDate.invalid"/>
                         <mat-datepicker #picker1></mat-datepicker>
+                        <mat-error *ngIf="controls.loanEndDate.errors?.required && controls.loanEndDate.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -89,8 +97,14 @@
                         <label class ="mandatory">Loan Amount</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="finalLoanAmount" placeholder="0,00,000" 
-                        (blur)="amountValidation()"/>
+                        <input type="number" class="form-control" formControlName="finalLoanAmount" placeholder="0,00,000" 
+                        (blur)="amountValidation()" [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid"/>
+                        <mat-error *ngIf="controls.finalLoanAmount.errors?.required && controls.finalLoanAmount.touched">
+                            Required field
+                        </mat-error>
+                        <mat-error *ngIf="controls.finalLoanAmount.errors?.pattern && controls.finalLoanAmount.touched">
+                            Invalid
+                        </mat-error>
                         <mat-error *ngIf="controls.finalLoanAmount.errors?.invalidAmt">Enter Valid Amount</mat-error>
                     </div>
                 </div>
@@ -105,10 +119,14 @@
                         <label class ="mandatory">Payment Frequency</label>
                     </div>
                     <div class="col-7">
-                        <select class="form-control" formControlName="paymentType" (change)="getIntrest()">
+                        <select class="form-control" formControlName="paymentType" (change)="getIntrest()"
+                        [class.isError]="controls.paymentType.touched && controls.paymentType.invalid">
                             <option value="" [selected]="true" [disabled]="true">Select Repay Period</option>
                             <option [value]="pay.value" *ngFor="let pay of repayType">{{pay.name | titlecase}}</option>
                         </select>
+                        <mat-error *ngIf="controls.paymentType.errors?.required && controls.paymentType.touched">
+                            Required field
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -118,7 +136,14 @@
                         <label class ="mandatory">Interest Rate</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="interestRate" placeholder="00%" />
+                        <input type="number" class="form-control" formControlName="interestRate" placeholder="00%" 
+                        [class.isError]="controls.interestRate.touched && controls.interestRate.invalid"/>
+                        <mat-error *ngIf="controls.interestRate.errors?.required && controls.interestRate.touched">
+                            Required field
+                        </mat-error>
+                        <mat-error *ngIf="controls.interestRate.errors?.pattern && controls.interestRate.touched">
+                           Invalid Input
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -151,10 +176,14 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label class ="mandatory">Processing Charges</label>
+                        <label>Processing Charges</label>
                     </div>
                     <div class="col-7">
-                        <input class="form-control" formControlName="interestRate" placeholder="00%" />
+                        <input type="number" class="form-control" formControlName="processingCharge" placeholder="00%" 
+                        [class.isError]="controls.processingCharge.touched && controls.processingCharge.invalid"/>
+                        <mat-error *ngIf="controls.processingCharge.errors?.pattern && controls.processingCharge.touched">
+                            Invalid Input
+                        </mat-error>
                     </div>
                 </div>
             </div>
@@ -178,16 +207,16 @@
             </div>
         </div>
     </form>
-    <div class="row justify-content-center kt-margin-b-20">
+    <div class="row justify-content-center kt-margin-b-20" *ngIf="dateOfPayment.length > 0">
         <div class="col-6">
             <div class="row justify-content-center">
 
                 <div class="col-7">
-                    <div class="table-div">
+                    <div class="table-div" id="print">
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
-                                    <th scope="col" style="width: 50%" class="rating-title">Date</th>
+                                    <th scope="col" style="width: 50%" class="rating-title text-left">Date</th>
                                     <th scope="col" style="width: 50%" class="rating-cce">Interest Amount</th>
                                 </tr>
                             </thead>
@@ -201,7 +230,7 @@
                     </div>
 
                     <div class="kt-margin-t-20 kt-margin-b-30">
-                        <kt-button [value]="'Print Now'" [type]="'button'"></kt-button>
+                        <kt-button [value]="'Print Now'" [type]="'button'" (click)="printNow()"></kt-button>
                     </div>
                 </div>
             </div>
