create modul for karat detail,some change logistic

--- a/gold-admin-frontend/src/app/views/pages/emi-management/logisticPartner/add-logistic-partner/add-logistic-partner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/logisticPartner/add-logistic-partner/add-logistic-partner.component.html
@@ -8,7 +8,7 @@
         <div class="kt-form">
             <form [formGroup]="logisticPartnerForm">
 
-                <div class="kt-portlet__body-progress" *ngIf="viewLoading">
+                <div class="kt-portlet__body-progress" >
                     <mat-spinner [diameter]="20"></mat-spinner>
                 </div>
 
